--- a/evaluation/plot.ipynb
+++ b/evaluation/plot.ipynb
@@ -101,7 +101,7 @@
    "source": [
     "f_net.load_state_dict(torch.load(os.path.join(exp_dir, 'model_final'),map_location=torch.device('cpu')))\n",
     "f_net.to(device)\n",
-    "sf2m_score_model.load_state_dict(torch.load(os.path.join(exp_dir, 'score_model'),map_location=torch.device('cpu'))) #Load score_model_final if use_pinn is set to true\n",
+    "sf2m_score_model.load_state_dict(torch.load(os.path.join(exp_dir, 'score_model_final'),map_location=torch.device('cpu')))\n",
     "sf2m_score_model.to(device)"
    ]
   },
