Update score matching code

--- a/evaluation/plot.ipynb
+++ b/evaluation/plot.ipynb
@@ -720,7 +720,7 @@
     "np.save(exp_dir+'/sde_trajec.npy', sampled_sde_trajec)\n",
     "\n",
     "\n",
-    "ts_points = torch.arange(n_times, device=device)\n",
+    "ts_points = torch.tensor(sorted(df.samples.unique()), dtype=torch.float32)\n",
     "print(ts_points)\n",
     "\n",
     "sde_point, traj_lnw = euler_sdeint(sde, initial_state, dt=0.1, ts=ts_points)\n",
